# videoedit

./: README.md
VideoEditor/: CMakeLists.txt  README.md  hieng
VideoEditor/src/: CanvasSettingsDialog.cpp  CanvasSettingsDialog.h  CropDialog.cpp  CropDialog.h  EffectsPanel.cpp  EffectsPanel.h  ExportDialog.cpp  ExportDialog.h  MainWindow.cpp  MainWindow.h  MediaBin.cpp  MediaBin.h  ProjectManager.cpp  ProjectManager.h  ThumbnailGenerator.cpp  ThumbnailGenerator.h  Timeline.cpp  Timeline.h  TimelineClip.h  ToolBar.cpp  ToolBar.h  VideoPlayer.cpp  VideoPlayer.h  main.cpp
